--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notícias</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 <body>
-  <nav class="canais">
-    <img
-      class="logo"
-      src="../desafio-vibra/img/band-logo-.png"
-      alt="Logo Band"/>
+  <nav class="menu-canais">
+    <div class="div-logo">
+      <img src="./img/band-logo-.png" alt="Logo Band"/>
+    </div>
+    <div class="div-canais">
       <ul> 
         <li><a href="">Notícias</a>
         </li>
@@ -19,8 +21,8 @@
         </li>
         <li><a href="">Entretenimento</a>
         </li>
-    </ul>
-  </nav>
+      </ul>
+    </div>
   </nav>
 </body>
 </html>
