--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
       </ul>
     </div>
   </nav>
+  <div class="container"></div>
+<h2>É DIA DE MASTERCHEF</h2>
+Programa de hoje tem duelos e aula com Helena Rizzo
+Saiba como e onde assistir ao MasterChef ao vivo
 </body>
 </html>
