--- a/index.html
+++ b/index.html
@@ -9,24 +9,68 @@
   <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 <body>
-  <nav class="menu-canais">
-    <div class="div-logo">
+  <nav class="channel">
+    <div class="esquerdo">
+      <div class="band-lg">
       <img src="./img/band-logo-.png" alt="Logo Band"/>
+      </div>
+      <div class="div-channel">
+      </div>
     </div>
-    <div class="div-canais">
-      <ul> 
-        <li><a href="">Notícias</a>
-        </li>
-        <li><a href="">Esportes</a>
-        </li>
-        <li><a href="">Entretenimento</a>
-        </li>
+    <div class="direito">
+        <ul> 
+          <li class="nav-item"><a href="">Notícias</a>
+          </li>
+          <li class="nav-item"><a href="">Esportes</a>
+          </li>
+          <li class="nav-item"><a href="">Entretenimento</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Receitas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Faustão</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Fórmula 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Eleições</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Masterchef</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Programação</a>
+          </li>
       </ul>
     </div>
   </nav>
-  <div class="container"></div>
-<h2>É DIA DE MASTERCHEF</h2>
-Programa de hoje tem duelos e aula com Helena Rizzo
-Saiba como e onde assistir ao MasterChef ao vivo
+  <div class="container">
+    <p class="news">
+      <h2>ESPORTES</h2>
+          <img src="../desafio-band-uol/img/news001.webp" alt="imagem masterchef" height="150px" width="250px" align="left">
+          <h3>Fórmula 1 tem 11 vagas definidas no grid de 2023</h3>
+          <p>A notícia de que a Red Bull renovou o contrato com Sergio Pérez até o fim da temporada 2024 deixou boa parte do grid e a Fórmula 1 para 2023 já definido.</p>
+          <p>Com o acerto de Checo, a F1 tem 11 das 20 vagas já definidas para o próximo ano. Entre as principais equipes, as duplas titulares devem permanecer além de 2022.</p><br>
+
+      <h2>VIOLÊNCIA </h2>
+          <img src="../desafio-band-uol/img/news002.webp" alt="imagem masterchef" height="150px" width="250px" align="left">
+          <h3>Guarda civil pressiona joelho em pescoço de homem durante abordagem em SP </h3>
+          <p>Um homem foi preso em flagrante acusado de tráfico de drogas em Santa Cecília, no centro da capital paulista, na última segunda-feira (30), na Rua Ana Cintra. Um vídeo flagrou a abordagem violenta da GCM contra o suspeito.</p>
+          <p>Nas imagens, é possível ver os agentes apoiando o joelho no pescoço do homem. Os guardas ainda teriam colocado um saco com pó branco ao lado dele para acusá-lo de tráfico de drogas.</p><br>
+     
+        <h2>CONTEÚDO DE MARCA </h2>
+          <img src="../desafio-band-uol/img/news003.webp" alt="imagem masterchef" height="150px" width="250px" align="left">
+          <h3>Bobó de frango é uma variação deliciosa de famosa receita brasileira </h3>
+          <p>MODO DE PREPARO: Em uma panela quente com azeite, doure as Tiras de Filé de Peito de Frango Swift temperadas com sal. Acrescente a Cebola Picada Swift, o alho e o tomate e refogue-os levemente. Junte a mandioca espremida, o Caldo Culinário de Galinha Swift, o leite de coco e o azeite de dendê e mexa bem. Deixe cozinhar por cerca de 15 minutos. Finalize colocando a salsinha e sirva.</p>
+          <p><link rel="Saiba mais" href="google.com">Conheça a receita! </p>
+
+
+
+
+
+  </div>
+</div>
 </body>
 </html>
